# dotfiles

./: .editorconfig  .gitignore  .mailmap  .stow-local-ignore  LICENSE  Makefile  README.adoc  REUSE.toml  flake.lock.license  flake.nix  shell.nix  treefmt.toml  vtsm
.vtsm/: arch.json  arch.json.license  opensuse.json
LICENSES/: BSD-3-Clause.txt
base16/: albino-bark-on-a-tree.yaml  bark-on-a-tree.yaml
distrobox/: containers.ini
emacs/: config.el  init.el  packages.el
emacs/modules/tools/wiki/: README.org  autoload.el  config.el  doctor.el  packages.el
kitty/: kitty.conf
nautilus-extensions/: README.adoc  fds-hash.blp  fds-hash.py  meson.build  pyproject.toml
nautilus/scripts/: Make SHA256 checksum  Verify SHA256 checksum file
nu/autoload/: autojump.nu  direnv.nu  dirs.nu  fzf.nu  qol.nu  wezterm.nu
nu/scripts/foodogsquared/: dotdir.nu  git.nu  mod.nu  nuzlocke.nu  qol.nu  utils.nu  xdg.nu
nvim/: init.lua  lazy-lock.json
nvim/colors/: fds-theme.vim
nvim/lua/: settings.lua
nvim/lua/foodogsquared/: init.lua  neovide.lua  utils.lua
nvim/lua/lush_theme/: fds-theme.lua
nvim/lua/plugins/: appearance.lua  completion.lua  debugger.lua  fuzzy-finder.lua  languages.lua  note-taking.lua  qol.lua  snippets.lua  toolings.lua  tree-sitter.lua
nvim/luasnippets/: all.lua  asciidoc.lua
nyxt/: config.lisp
tridactyl/: tridactylrc
wezterm/: wezterm.lua
wezterm/config/: appearance.lua  bar.lua  base.lua  events.lua  exec_domain.lua  helpers.lua  keys.lua  mux_server.lua
wezterm/foodogsquared/: xdg.lua
wezterm/foodogsquared/utils/: init.lua  lists.lua  strings.lua  wezterm.lua
zellij/: config.kdl
